Refactor project structure and update author apis
