# internal/auth/handlers.go
@@ -1,19 +1,12 @@
-package handler
+package auth
 
 import (
-	"encoding/base64"
 	"fmt"
 	"github.com/gofiber/fiber/v2"
-	"github.com/google/uuid"
-	"github.com/imtiaz246/codera_oj/custom/config"
-	apiv1 "github.com/imtiaz246/codera_oj/internal/codera_server/api/v1"
+	"github.com/imtiaz246/codera_oj/internal/utils"
 	"github.com/imtiaz246/codera_oj/models"
-	"github.com/imtiaz246/codera_oj/modules/mailer"
 	"github.com/imtiaz246/codera_oj/modules/token"
-	"github.com/imtiaz246/codera_oj/utils"
-	"github.com/o1egl/paseto"
 	"net/http"
-	"time"
 )
 
 var (
@@ -26,14 +19,14 @@ var (
 // @Summary SignUp a user.
 // @Description create account for a user.
 // @Tags auth
-// @Param data body apiv1.UserRegisterRequest true "data"
+// @Param data body UserRegisterRequest true "data"
 // @Accept application/json
 // @Produce json
 // @Success 200 {object} map[string]interface{}
 // @Router /auth/signup [post]
 func SignUp(ctx *fiber.Ctx) error {
-	req := new(apiv1.UserRegisterRequest)
-	if err := BindAndValidate(ctx, req); err != nil {
+	req := new(UserRegisterRequest)
+	if err := utils.BindAndValidate(ctx, req); err != nil {
 		return ctx.Status(http.StatusBadRequest).JSON(utils.NewError(err))
 	}
 
@@ -57,7 +50,7 @@ func SignUp(ctx *fiber.Ctx) error {
 		return ctx.Status(http.StatusInternalServerError).JSON(utils.NewError(err))
 	}
 
-	return ctx.Status(http.StatusCreated).JSON(apiv1.UserSuccessfulRegistrationResponse)
+	return ctx.Status(http.StatusCreated).JSON(UserSuccessfulRegistrationResponse)
 }
 
 // Login create access token and refresh token for a valid user
@@ -65,14 +58,14 @@ func SignUp(ctx *fiber.Ctx) error {
 // @Summary Login a user.
 // @Description logs in a user if valid credentials given.
 // @Tags auth
-// @Param data body apiv1.UserLoginRequest true "data"
+// @Param data body UserLoginRequest true "data"
 // @Accept application/json
 // @Produce json
-// @Success 200 {object} apiv1.UserLoginResponse
+// @Success 200 {object} UserLoginResponse
 // @Router /auth/login [post]
 func Login(ctx *fiber.Ctx) error {
-	req := new(apiv1.UserLoginRequest)
-	if err := BindAndValidate(ctx, req); err != nil {
+	req := new(UserLoginRequest)
+	if err := utils.BindAndValidate(ctx, req); err != nil {
 		return ctx.Status(http.StatusNotAcceptable).JSON(utils.NewError(err))
 	}
 
@@ -105,7 +98,7 @@ func Login(ctx *fiber.Ctx) error {
 		return ctx.Status(http.StatusInternalServerError).JSON(utils.NewError(err))
 	}
 
-	return ctx.Status(http.StatusOK).JSON(apiv1.NewLoginResponse(u, accessTokenInfo, refreshTokenInfo))
+	return ctx.Status(http.StatusOK).JSON(NewLoginResponse(u, accessTokenInfo, refreshTokenInfo))
 }
 
 // VerifyEmail verifies email of a valid user
@@ -133,7 +126,7 @@ func VerifyEmail(ctx *fiber.Ctx) error {
 		return ctx.Status(http.StatusInternalServerError).JSON(utils.NewError(err))
 	}
 
-	return ctx.Status(http.StatusOK).JSON(apiv1.EmailSuccessfulVerificationResponse)
+	return ctx.Status(http.StatusOK).JSON(EmailSuccessfulVerificationResponse)
 }
 
 // RenewToken renews the access token using a valid refresh token
@@ -146,7 +139,7 @@ func VerifyEmail(ctx *fiber.Ctx) error {
 // @Accept application/json
 // @Produce json
 // @Success 200 {object} map[string]interface{}
-// @Router /auth/{username}/renew-token [get]
+// @Router /auth/renew-token [get]
 func RenewToken(ctx *fiber.Ctx) error {
 	refreshToken := ctx.Query("refresh-token")
 	pasetoPayload, err := getPasetoJsonPayload(refreshToken)
@@ -199,134 +192,5 @@ func RenewToken(ctx *fiber.Ctx) error {
 		return ctx.Status(http.StatusInternalServerError).JSON(utils.NewError(err))
 	}
 
-	return ctx.Status(http.StatusOK).JSON(apiv1.NewRenewTokenResponse(user, accessTokenInfo))
-}
-
-// extractRegistrationRequest extracts information for user registration request
-func extractRegistrationRequest(r *apiv1.UserRegisterRequest) (*models.User, *models.VerifyEmail) {
-	u := &models.User{
-		Username: r.Username,
-		Password: r.Password,
-	}
-	ve := &models.VerifyEmail{
-		Email: r.Email,
-	}
-
-	return u, ve
-}
-
-// sendEmailVerificationMail sends email verification mail to user
-func sendEmailVerificationMail(ve *models.VerifyEmail) error {
-	return mailer.NewMailer().
-		To([]string{ve.ExtractEmail()}).
-		WithSubject("Codera OJ Email Verification").
-		WithTemplate(mailer.EmailTypeEmailVerification, ve).
-		Send()
-}
-
-// getTokenManager get the token manager
-func getTokenManager(authConfig config.AuthConfig) (token.TokenManager, error) {
-	key, err := base64.StdEncoding.DecodeString(authConfig.Key)
-	if err != nil {
-		return nil, err
-	}
-	tokenManager, err := token.NewPasetoToken(key)
-	if err != nil {
-		return nil, err
-	}
-	return tokenManager, nil
-}
-
-// getTokens returns access token and refresh token for a valid user
-func getTokens(claimsInfo *token.ClaimsInfo) (accessTokenInfo, refreshTokenInfo *token.TokenInfo, err error) {
-	authConfig := config.Settings.Auth
-	tokenManager, err := getTokenManager(authConfig)
-	if err != nil {
-		return
-	}
-
-	accessTokenDuration, err := time.ParseDuration(authConfig.AccessTokenDuration)
-	if err != nil {
-		return
-	}
-	accessTokenInfo, err = tokenManager.CreateToken(claimsInfo, accessTokenDuration)
-	if err != nil {
-		return
-	}
-
-	refreshTokenDuration, err := time.ParseDuration(authConfig.RefreshTokenDuration)
-	if err != nil {
-		return
-	}
-	refreshTokenInfo, err = tokenManager.CreateToken(claimsInfo, refreshTokenDuration)
-	if err != nil {
-		return
-	}
-
-	return
-}
-
-// getAccessToken get the access token with claims and returns the TokenInfo
-func getAccessToken(claimsInfo *token.ClaimsInfo) (accessTokenInfo *token.TokenInfo, err error) {
-	authConfig := config.Settings.Auth
-	tokenManager, err := getTokenManager(authConfig)
-	if err != nil {
-		return
-	}
-
-	accessTokenDuration, err := time.ParseDuration(authConfig.AccessTokenDuration)
-	if err != nil {
-		return
-	}
-	accessTokenInfo, err = tokenManager.CreateToken(claimsInfo, accessTokenDuration)
-	if err != nil {
-		return
-	}
-
-	return
-}
-
-// getTokenPayload verifies the token and returns the paseto json payload
-func getPasetoJsonPayload(tokenStr string) (*paseto.JSONToken, error) {
-	authConfig := config.Settings.Auth
-	key, err := base64.StdEncoding.DecodeString(authConfig.Key)
-	if err != nil {
-		return nil, err
-	}
-
-	tokenManager, err := token.NewPasetoToken(key)
-	if err != nil {
-		return nil, err
-	}
-
-	pasetoPayload, err := tokenManager.VerifyToken(tokenStr)
-	if err != nil {
-		return nil, err
-	}
-	return pasetoPayload, nil
-}
-
-// createSessionFromTokenInfo creates session from token info
-func createSessionFromTokenInfo(tokenInfo *token.TokenInfo) (*models.Session, error) {
-	tokenUUID, err := uuid.Parse(tokenInfo.Payload.Jti)
-	if err != nil {
-		return nil, err
-	}
-	user := new(models.User)
-	if err := models.GetUserByUsername(tokenInfo.Payload.Get("username"), user); err != nil {
-		return nil, err
-	}
-	session := &models.Session{
-		ID:        tokenUUID,
-		User:      user,
-		UserID:    user.ID,
-		UserAgent: tokenInfo.Payload.Get("userAgent"),
-		ClientIP:  tokenInfo.Payload.Get("clientIP"),
-		IsBlocked: false,
-		ExpiresAt: tokenInfo.Payload.Expiration,
-		CreatedAt: tokenInfo.Payload.IssuedAt,
-		UpdatedAt: tokenInfo.Payload.IssuedAt,
-	}
-
-	return session, nil
+	return ctx.Status(http.StatusOK).JSON(NewRenewTokenResponse(user, accessTokenInfo))
 }
